deploy-cepanel/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ce-panel
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
    - host: "ce-panel-k8s-prod.canaryis.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: ce-panel
              servicePort: node
  tls:
    - hosts:
        - ce-panel-k8s-prod.canaryis.com
      secretName: star-canaryis-com-cert
